--- a/estilo.css
+++ b/estilo.css
@@ -1,6 +1,5 @@
 /* código do arquivo estilo.css */
 
-
 header#menu {
     display: block;
     border: 2px solid black;
@@ -9,16 +8,16 @@ header#menu {
 
 section#corpo {
     display: block;
-    width: 70%;
-    float: left;
+    width: 100%;
+    box-sizing: border-box;
     border: 2px solid black;
     padding: 10px;
 }
 
 aside#lateral {
     display: block;
-    width: 25%;
-    float: right;
+    width: 100%;
+    box-sizing: border-box;
     border: 2px solid black;
     padding: 10px;
 }
@@ -30,7 +29,7 @@ footer#rodape {
 }
 
 #interface {
-    width: 1000px;
+    max-width: 1000px;
     margin: auto;
     padding: 20px;
     background-color: white;
@@ -38,4 +37,16 @@ footer#rodape {
 
 body {
     background-color: #808080;
+}
+
+/* Media queries para dispositivos com telas menores que 768px */
+
+@media only screen and (max-width: 767px) {
+    #interface {
+        padding: 10px;
+    }
+    section#corpo, aside#lateral {
+        width: 100%;
+        float: none;
+    }
 }
